# PathoBERT

./: README.md  pyproject.toml  requirements.txt
pathobert/: cli.py  config.py
tokenized/: attention_mask.npy  input_ids.npy
